# msl-recognition-ml

./: .dockerignore  .gitignore  AWS_DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  envi.md  main.py  main_combined_pso.py  pyproject.toml  realtime_predict.py  realtime_predict_combined_pso.py  requirements.txt
.github/workflows/: deploy.yml
docs/: model_expansion_options.md
models/: classifier.h5  combined_best_params.json  combined_classifier_pso.h5  combined_encoder.h5  combined_labels.json  encoder.h5
msl_recognition/: __init__.py  autoencoder.py  contrastive_dataset.py  dataset.py  eda.py  features.py  plots.py  pso_tuner.py
msl_recognition/data_preparation/: augment_landmarks.py  augment_landmarks_combined.py  extract_landmarks.py  extract_landmarks_combined.py
msl_recognition/modeling/: autoencoder.py  classifier.py  predict.py  pso_optimizer.py  train.py
msl_recognition/training/: train_autoencoder.py  train_autoencoder_combined.py  train_classifier.py  train_classifier_combined_pso.py
