[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "msl_recognition"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "elv" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["msl_recognition"]
include = ["pyproject.toml", "msl_recognition/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["msl_recognition"]
force-sort-within-sections = true

